# openrouter-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  video_recipie.md
src/openrouter_cli/: __main__.py  app.py  config.py  errors.py  io_utils.py  mime_utils.py  output.py  polling.py  sdk_adapter.py
src/openrouter_cli/commands/: analyze.py  audio.py  chat.py  credits.py  embed.py  generation.py  image.py  models.py  providers.py  rerank.py  video.py
tests/: conftest.py  fakes.py  test_analyze.py  test_audio.py  test_chat.py  test_credits.py  test_embed.py  test_generation.py  test_image.py  test_io_utils.py  test_mime_utils.py  test_models.py  test_output_json.py  test_providers.py  test_rerank.py  test_video.py
