[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrouter-cli"
version = "0.1.0"
description = "CLI for OpenRouter chat/vision analysis, image generation, and video generation - for humans and coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openrouter>=0.11.3,<0.12",
    "typer>=0.12,<1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
orouter = "openrouter_cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openrouter_cli"]
